--- a/src/app/views/user/user-settings/user-profile/user-profile.component.scss
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.scss
@@ -22,6 +22,10 @@
       word-wrap: break-word;
       resize: none;
     }
+
+    input {
+      border: 1px solid rgba(0, 0, 0, 0.15)
+    }
   }
 
   .profile-input-table-container {
