Fixed issue with too big logo

--- a/src/app/components/job-state-status-bar/job-state-status-bar.component.html
+++ b/src/app/components/job-state-status-bar/job-state-status-bar.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="row">
       <div class="col-xs-5 job-status-icon-container">
-        <img [src]="job.companyLogoURL" class="company-logo">
+        <img [src]="job.companyLogoURL" class="company-logo" style="max-width: 100px; max-height: 100px;">
       </div>
       <div class="col-xs-7">
         <h4 class="job-status-text">{{job.company.name}}</h4>
