--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -24,7 +24,7 @@
     <div class="col-xs-12 my-jobs-show-all-button">
       <span routerLink="/jobs/1">{{'common.show_all' | translate | lowercase}} > <i class="icon-ic-arrow-right"></i></span>
     </div>
-    <div class="col-xs-12 jobs-slider">
+    <div class="col-xs-12 jobs-slider" align="center">
       <div *ngFor="let job of newJobs" class="item-container clickable" [routerLink]="['/job', job.id]">
         <div class="job-name">
           <div>
@@ -45,7 +45,7 @@
     <div class="col-xs-12 user-jobs-show-all-button">
       <span routerLink="/my-jobs">{{'common.show_all' | translate | lowercase}} > <i class="icon-ic-arrow-right"></i></span>
     </div>
-    <div class="col-xs-12 jobs-slider">
+    <div class="col-xs-12 jobs-slider" align="center">
       <div *ngFor="let userJob of userJobs" class="item-container clickable" [routerLink]="['/job', userJob.job.id]">
         <div class="job-name">
           <div>
