Mobile css adjustments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
   <div class="navbar-container">
     <nav class="header navbar-light bg-faded">
       <div class="row navbar-container">
-        <div class="col-xs row flex-items-xs-middle">
+        <div class="navbar-home row flex-items-xs-middle">
           <a routerLink="/home">
             <img class="logo-img" src="/assets/images/logo.png" alt="Just Arrived" />
           </a>
         </div>
-        <div class="col-xs right row flex-items-xs-middle">
+        <div class="navbar-menus right row flex-items-xs-middle">
           <div (click)="onLanguageMenuButtonClick()" class="button-container">
             <div class="nav-language-icon">
               {{selectedLanguage.languageCode}}
