--- a/src/app/views/user/user-settings/user-profile/user-profile.component.scss
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.scss
@@ -3,7 +3,6 @@
 
 .profile-form-container {
   padding-top: 50px;
-  max-width: 500px;
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
@@ -40,32 +39,32 @@
         height: 37px;
 
         .profile-input-table-row-inner-item-container {
-          display: table;
+          flex: 1;
           height: 100%;
+          display: flex;
+          align-items: center;
 
-          > p {
-            display: table-cell;
-            vertical-align: middle;
+          .profile-input-table-row-inner-item-text {
             font-size: 14px;
             opacity: 0.7;
             padding-left: 3px;
+          }
+
+          .profile-input-table-row-inner-icon-container {
+            margin-left: 10px;
+            margin-right: auto;
+
+            i {
+              &:hover {
+                color: rgba(0, 0, 0, 0.3);
+              }
+            }
           }
         }
 
         .profile-input-table-row-inner-dropdown-container {
           width: 250px;
           margin-left: auto;
-        }
-
-        .profile-input-table-row-inner-icon-container {
-          margin-left: 10px;
-          margin-right: 20px;
-
-          i {
-            &:hover {
-              color: rgba(0, 0, 0, 0.3);
-            }
-          }
         }
       }
     }
