Do not display jobs applied for if not logged in

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -65,7 +65,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row" *ngIf="user">
     <div class="home-jobs-applied-for-header-wrapper col-xs-12">
       <div class="home-jobs-applied-for-header col-xs-10 offset-xs-1">
         <h3>Jobs applied for</h3>
