Fixed buttons on home page according to style guides

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,7 @@
               {{user.firstName}} {{user.lastName}}
             </div>
             <div *ngIf="!user">
-              <a routerLink="/user/register" class="create-user medium-button-primary-light">Create User</a>
+              <a routerLink="/user/register" class="create-user btn-primary-light">Create User</a>
             </div>
           </div>
         </div>
