Added uppercase pipe instead of uppercase translation item

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -56,11 +56,11 @@
         </div>
 
         <div *ngIf="userJob.concluded" class="user-jobs-salary-container user-jobs-salary-container-inactive">
-          {{'home_page.user_jobs_slider_item.status.finished' | translate}}
+          {{'home_page.user_jobs_slider_item.status.finished' | translate | uppercase}}
         </div>
 
         <div *ngIf="userJob.willPerform" class="user-jobs-salary-container user-jobs-salary-container-active">
-          {{'home_page.user_jobs_slider_item.status.ongoing' | translate}}
+          {{'home_page.user_jobs_slider_item.status.ongoing' | translate | uppercase}}
         </div>
 
       </div>
