Fixed margins for jobs-applied-for

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -75,7 +75,7 @@
     </div>
 
     <div *ngFor="let job of jobsAppliedFor" class="home-jobs-applied-for-job-item-wrapper col-xs-12">
-      <div class="home-jobs-applied-for-job-item row col-xs-10 offset-xs-1" [routerLink]="['/job', job.job.id]">
+      <div class="home-jobs-applied-for-job-item row col-xs-12" [routerLink]="['/job', job.job.id]">
         <p class="col-xs-10 col-md-11">{{job.job.name}}</p>
         <span class="col-xs-2 col-md-1"> > </span>
       </div>
